external-crates/move/crates/move-compiler/tests/move_2024/unit_test/random_test_invalid@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E10005]: unable to generate test
  ┌─ tests/move_2024/unit_test/random_test_invalid.move:4:7
  │
4 │     #[random_test]
  │       ^^^^^^^^^^^ No parameters to generate for random test. A #[random_test] function must have at least one parameter to generate.
5 │     fun foo() { }
  │         --- Error found in this test

error[E02015]: invalid attribute
  ┌─ tests/move_2024/unit_test/random_test_invalid.move:7:7
  │
7 │     #[random_test(b = 1)]
  │       ^^^^^^^^^^^^^^^^^^ Attribute 'random_test' does not support parameters. Expected '#[random_test]' with no arguments
  │
  = Input values will be randomly generated for this test.

warning[W10007]: issue with attribute value
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:11:7
   │
10 │     #[random_test]
   │       ----------- Previously annotated here
11 │     #[test]
   │       ^^^^ function annotated with duplicate mode 'test'
   │
   = Attributes '#[test]' and '#[random_test]' implicitly specify '#[mode(test)]'

error[E10004]: invalid usage of known attribute
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:11:7
   │
10 │     #[random_test]
   │       ----------- Previously annotated here
11 │     #[test]
   │       ^^^^ function annotated as both #[test] and #[random_test]. You need to declare it as either one or the other

error[E10005]: unable to generate test
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:14:7
   │
14 │     #[random_test]
   │       ^^^^^^^^^^^ No parameters to generate for random test. A #[random_test] function must have at least one parameter to generate.
15 │     #[test]
16 │     fun quxz() { }
   │         ---- Error found in this test

warning[W10007]: issue with attribute value
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:15:7
   │
14 │     #[random_test]
   │       ----------- Previously annotated here
15 │     #[test]
   │       ^^^^ function annotated with duplicate mode 'test'
   │
   = Attributes '#[test]' and '#[random_test]' implicitly specify '#[mode(test)]'

error[E10004]: invalid usage of known attribute
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:15:7
   │
14 │     #[random_test]
   │       ----------- Previously annotated here
15 │     #[test]
   │       ^^^^ function annotated as both #[test] and #[random_test]. You need to declare it as either one or the other

error[E10005]: unable to generate test
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:18:7
   │
18 │     #[random_test]
   │       ^^^^^^^^^^^ No parameters to generate for random test. A #[random_test] function must have at least one parameter to generate.
19 │     #[test_only]
20 │     fun bar() { }
   │         --- Error found in this test

warning[W10007]: issue with attribute value
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:19:7
   │
18 │     #[random_test]
   │       ----------- Previously annotated here
19 │     #[test_only]
   │       ^^^^^^^^^ function annotated with duplicate mode 'test'
   │
   = Attributes '#[test]' and '#[random_test]' implicitly specify '#[mode(test)]'

error[E10005]: unable to generate test
   ┌─ tests/move_2024/unit_test/random_test_invalid.move:24:16
   │
24 │     fun baz(_: X) { }
   │         ---    ^ Unsupported type for generated input for test. Only built-in types are supported for generated test inputs
   │         │       
   │         Error found in this test
   │
   = Supported builti-in types are: bool, u8, u16, u32, u64, u128, u256, address, and vector<T> where T is a built-in type
